examples/test/testpolicy18352.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18352
  namespace: namespace312
spec:
  podSelector:
    matchLabels:
      key30: value10
      key33: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value5
      podSelector:
        matchLabels:
          key42: value22
          key35: value27
          key17: value26
